2009-06-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs:
	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Fixed
	  "Bug 514563 - Inconsistent treatment of nullable types for
	  comments and information".

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	  Don't report the error about missing resgen if the tool is
	  not really necessary.

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom\AbstractMember.cs: Allow internal
	  visibility between types from a file not bound to a project.

2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: Don't
	  reuse this serializer for children, since it has
	  solution-specific serialization code.

2009-06-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/BuildResult.cs: Make Append more usable
	  by returning 'this' so it can be chained more easily. Also
	  ignore null values.

2009-06-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Policies/PolicyService.cs: Don't stop
	  with an error if a policy type is not known. The policy type
	  may be defined by an add-in which is not installed. Instead,
	  create a dummy policy object and serialize it back when
	  saving.

2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Use
	  TargetFramework for assembly lookups. Prioritize framework
	  assemblies over GAC assemblies.

	* MonoDevelop.Projects.Dom.Parser/IParserDatabase.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Serialization/ParserDatabase.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/MemoryDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Track assembly lookup APIs.
