@@ -1,3 +1,11 @@
+2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects/ProjectReference.cs: Notify changes in
+	  the status of the reference.
+
+	* MonoDevelop.Projects/DotNetProject.cs: Update the project
+	  references when the default runtime changes.
+
 2009-06-19  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs:
